@@ -1,3 +1,3 @@
-# pylint: disable-all
-"""disable-all is not usable as an inline option"""
+# pylint: errors-only
+"""errors-only is not usable as an inline option"""
 __revision__ = None
