@@ -17,3 +17,4 @@ class Aaa:
     """hop"""
     fetch_order = fetch_config('A')
 
+__revision__ = None
