@@ -1,1 +1,1 @@
-I:  1: Unable to consider inline option 'disable-all'
+I:  1: Unable to consider inline option 'errors-only'
