@@ -1,1 +1,1 @@
-E:  1: 'return' outside function
+E:  3: return outside function
